# MagicalForestFights-Game

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
includes/: constants.h
includes/creatures/: FightManager.h  MagicalCreature.h  MagicalCreatureState.h
includes/creatures/skills/: CreatureSkill.h  MagicalShield.h  RapidStrike.h  SkillType.h
includes/creatures/skills/attacking/: RapidStrike.h
includes/creatures/skills/defending/: MagicalShield.h
includes/creatures/stats/: CreatureStat.h  Defence.h  Health.h  Luck.h  Speed.h  Strength.h
includes/game/: GameEngine.h  GameState.h  IntroState.h  PlayState.h
includes/utils/: CharContainer.h
src/: main.cpp
src/creatures/: FightManager.cpp  MagicalCreature.cpp
src/creatures/skills/: CreatureSkill.cpp
src/creatures/stats/: CreatureStat.cpp
src/game/: GameEngine.cpp  GameState.cpp  IntroState.cpp  PlayState.cpp
test/: CreatureSkill_test.cc  CreatureStat_test.cc  MagicalCreature_test.cc
